<resources>
    <string name="app_name">WizardWorld</string>
    <string name="bottom_nav_wizard_label">Wizards</string>
    <string name="bottom_nav_house_label">Houses</string>
    <string name="bottom_nav_elixir_label">Elixirs</string>
    <string name="bottom_nav_spell_label">Spells</string>
    <string name="add_img_item_desc">image view</string>
    <string name="name">Name: %s</string>
...
